namespace BonyankopAPI.Models;

public enum DataType
{
    STRING,
    NUMBER,
    BOOLEAN,
    JSON
}
