namespace BonyankopAPI.Models;

public enum PaymentStatus
{
    PENDING,
    PARTIAL,
    COMPLETED,
    REFUNDED
}
