namespace BonyankopAPI.Models;

public enum ProblemCategory
{
    PLUMBING,
    ELECTRICAL,
    STRUCTURAL,
    HVAC,
    ROOFING
}
