namespace BonyankopAPI.Models;

public enum ProjectStatus
{
    SCHEDULED,
    IN_PROGRESS,
    COMPLETED,
    CANCELLED,
    DISPUTED
}
