namespace BonyankopAPI.Models;

public enum ProviderType
{
    COMPANY,
    ENGINEER
}
