namespace BonyankopAPI.Models;

public enum QuoteStatus
{
    PENDING,
    ACCEPTED,
    REJECTED,
    EXPIRED,
    WITHDRAWN
}
