namespace BonyankopAPI.Models;

public enum RequestStatus
{
    OPEN,
    QUOTES_RECEIVED,
    PROVIDER_SELECTED,
    CANCELLED
}
