namespace BonyankopAPI.Models;

public enum RiskLevel
{
    LOW,
    MEDIUM,
    HIGH
}
