namespace BonyankopAPI.Models;

public enum UrgencyLevel
{
    LOW,
    MEDIUM,
    HIGH,
    URGENT
}
