namespace BonyankopAPI.Models
{
    public enum UserRole
    {
        CITIZEN,
        ENGINEER,
        COMPANY,
        GOVERNMENT,
        ADMIN
    }
}
